@@ -15,6 +15,11 @@
 
         public object Invoke(IBindingEnvironment environemnt, object[] arguments)
         {
+            return this.Invoke(arguments);
+        }
+
+        public object Invoke(object[] arguments)
+        {
             Machine machine = Machine.Current;
 
             foreach (object argument in arguments)
