@@ -4,13 +4,14 @@ numbers = new Channel();
 running = true;
 k = 1;
 
-go while(running) { k++; numbers <- k; }
+go while(running) { k++; PrintLine("Generating " +k); numbers <- k; }
 
 function filter(in, out, prime)
 {
 	while (true) 
 	{
 		value = <-in;
+		PrintLine("Processing " + value + " in " + prime);
 		if (value % prime)
 			out <- value;
 	}
@@ -18,6 +19,7 @@ function filter(in, out, prime)
 
 function makefilter(channel, number)
 {
+	PrintLine("New filter for " + number);
 	newchannel = new Channel();
 	go filter(channel, newchannel, number);
 	return newchannel;
@@ -27,9 +29,9 @@ channel = numbers;
 
 number = <-channel;
 
-while (number < 1000) 
+while (number < 10) 
 {
-	PrintLine("Prime " + number);
+	PrintLine("Receiving " + number);
 	
 	channel = makefilter(channel, number);
 	
